--- a/src/resources/css/app.css
+++ b/src/resources/css/app.css
@@ -3,7 +3,34 @@
 @tailwind utilities;
 
 .shadow-t-lg {
-    --tw-shadow: 0 -6px 10px -2px rgb(0 0 0 / 0.05), 0 -3px 4px -3px rgb(0 0 0 / 0.05);
-    --tw-shadow-colored: 0 -6px 10px -2px var(--tw-shadow-color), 0 -3px 4px -3px var(--tw-shadow-color);
-    box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+    --tw-shadow: 0 -6px 10px -2px rgb(0 0 0 / 0.05),
+        0 -3px 4px -3px rgb(0 0 0 / 0.05);
+    --tw-shadow-colored: 0 -6px 10px -2px var(--tw-shadow-color),
+        0 -3px 4px -3px var(--tw-shadow-color);
+    box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000),
+        var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow-b-lg {
+    --tw-shadow: 0 6px 10px 2px rgb(0 0 0 / 0.05),
+        0 3px 4px 3px rgb(0 0 0 / 0.05);
+    --tw-shadow-colored: 0 6px 10px 2px var(--tw-shadow-color),
+        0 3px 4px 3px var(--tw-shadow-color);
+    box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000),
+        var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+h1,
+h2 {
+    font-weight: 700;
+}
+h1 {
+    font-size: 1.5rem;
+}
+h2 {
+    font-size: 1.25rem;
+}
+h3 {
+    font-size: 1.125rem;
+    font-weight: 600;
 }
